--- a/block-BHaaaq/index.html
+++ b/block-BHaaaq/index.html
@@ -1,8 +1,38 @@
-<!---
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
 
-![Box Model Exercise 2](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-2.png)
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Box-Model</title>
+</head>
 
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
---->
+<body>
+    <div class="block-one"></div>
+    <div class="section-one">
+        <div class="block-two"></div>
+        <div class="block-three"></div>
+    </div>
+    <div class="section-two">
+        <div class="block-four"></div>
+        <div class="block-five"></div>
+    </div>
+    <div class="main-block">
+        <div class="inside-block">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur rerum magni sunt error mollitia
+                beatae,
+                cupiditate vero qui quibusdam adipisci nobis tempore culpa officia iusto, enim perferendis excepturi
+                quisquam ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nobis ipsam natus
+                expedita
+                consectetur excepturi nihil blanditiis sint accusantium deserunt, ex enim ullam animi voluptates quidem!
+                Cum
+                provident nam dignissimos!
+            </p>
+        </div>
+    </div>
+</body>
+
+</html>
