--- a/block-BHaaaq/index.html
+++ b/block-BHaaaq/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+        <h1>Exercise Two</h1>
+    </header>
     <div class="block-one"></div>
     <div class="section-one">
         <div class="block-two"></div>
