--- a/block-BHaaau/index.html
+++ b/block-BHaaau/index.html
@@ -1,15 +1,55 @@
-<!---
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
 
-![Box Model Exercise 6](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-6.png)
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>The Box Model, Box-Sizing & Box Shadow</title>
+</head>
 
-#### Problems for exercise 2 in the layout
+<body>
+    <header>
+        <h1>The Box Model, Box-Sizing & Box Shadow</h1>
+    </header>
+    <hr class="line-one">
+    <div class="main-block">
+        <h2>Exercise 1</h2>
+        <p>No border on there Boxes</p>
+        <main>
+            <div class="margin">
+                <div class="padding">
+                    <div class="box-one">
 
-- Each parent container has width of 600px and border of 1px;
-- Each children box has width 180px and height 100px as well as margin of 10px;
-- Each child box which is having border has border-width 1px.
-- Note in the first container the boxes do not have any border.
+                    </div>
+                </div>
+            </div>
+            <div class="box-two">
+                <div class="box-model"></div>
+                <div class="box-model"></div>
+                <div class="box-model"></div>
+            </div>
 
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
---->
+            <hr class="line-one">
+
+            <div class="box-three">
+                <div class="box-model-three-one">
+                    <div class="box-model-three"></div>
+                    <div class="box-model-three"></div>
+                </div>
+                <div class="box-model-three"></div>
+            </div>
+
+            <hr class="line-one">
+
+            <div class="box-four">
+                <div class="box-model-four"></div>
+                <div class="box-model-four"></div>
+                <div class="box-model-four"></div>
+            </div>
+        </main>
+    </div>
+</body>
+
+</html>
