--- a/block-BHaaau/index.html
+++ b/block-BHaaau/index.html
@@ -19,11 +19,15 @@
         <p>No border on there Boxes</p>
         <main>
             <div class="margin">
-                <div class="padding">
-                    <div class="box-one">
+                <div class="box-one">
 
-                    </div>
                 </div>
+            </div>
+            <div class="circle">
+                <span class="circle1"></span>
+                <span class="circle2"></span>
+                <span class="circle3"></span>
+                <span class="circle4"></span>
             </div>
             <div class="box-two">
                 <div class="box-model"></div>
