--- a/block-BHaaav/index.html
+++ b/block-BHaaav/index.html
@@ -1,9 +1,76 @@
-<!---
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
 
-![Box Model Exercise 7](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-7.png)
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Assignment IV</title>
+</head>
 
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
+<body>
+    <header>
+        <h1>Solid State</h1>
+        <span>
+            <a href="index.html">HOME</a>
+            <a href="generic.html">GENERIC</a>
+            <a href="login.html">LOG IN</a>
+            <a href="signup.html">SIGN UP</a>
+        </span>
+    </header>
+    <section>
+        <div class="section-one">
+            <h2>THIS IS SOLID STATE</h2>
+            <hr>
+            <p>ALIQUET ENIM CEP JUSTO ADIPSING ERAT ACCUMSAN AT PARTURIENT</p>
+        </div>
+    </section>
+    <section class="one">
+        <div class="section-article">
+            <h3>Magna arcu feugiat</h3>
+            <img src="images/swapnil-dwivedi-N2IJ31xZ_ks-unsplash.jpg" alt="" width="200" height="200">
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, unde possimus! A minima odio
+                porro cupiditate quae reprehenderit, dolore fugit. Consequuntur temporibus praesentium officiis ea non
+                quam iure magnam error!
+            </p>
+            <span>
+                <a href="" class="read">Read More</a>
+            </span>
+        </div>
+    </section>
+    <section class="two">
+        <div class="section-article">
+            <h3>Magna arcu feugiat</h3>
+            <img src="images/aiony-haust-3TLl_97HNJo-unsplash.jpg" alt="" width="200" height="200">
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, unde possimus! A minima odio
+                porro cupiditate quae reprehenderit, dolore fugit. Consequuntur temporibus praesentium officiis ea non
+                quam iure magnam error!
+            </p>
+            <span>
+                <a href="" class="read">Read More</a>
+            </span>
+        </div>
+    </section>
+    <section class="three">
+        <div class="section-article">
+            <h3>Magna arcu feugiat</h3>
+            <img src="images/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="" width="200" height="200">
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, unde possimus! A minima odio
+                porro cupiditate quae reprehenderit, dolore fugit. Consequuntur temporibus praesentium officiis ea non
+                quam iure magnam error!
+            </p>
+            <span>
+                <a href="" class="read">Read More</a>
+            </span>
+        </div>
+    </section>
+    <footer>
+        <p>&#169; Untitled Inc. All Rights Reserved</p>
+    </footer>
+</body>
 
---->
+</html>
